--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ lto = true
 
 [features]
 default = []
+debug_prints = []
 bsp_rpi3 = ["tock-registers"]
 bsp_rpi4 = ["tock-registers"]
 
@@ -17,6 +18,9 @@ name = "kernel"
 path = "src/main.rs"
 
 [dependencies]
+linked_list_allocator = { version = "0.10.x", default-features = false, features = ["const_mut_refs"] }
+
+# Optional dependencies
 tock-registers = { version = "0.8.x", default-features = false, features = ["register_types"], optional = true }
 
 [target.'cfg(target_arch = "aarch64")'.dependencies]
